[project]
name = "cl-server-shared"
version = "0.1.0"
description = "Shared utilities for CL Server services"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Ananda Sarangaram"}
]
maintainers = [
    {name = "Ananda Sarangaram"}
]
keywords = [
    "server",
    "shared",
    "utilities",
    "database",
    "file-storage",
    "compute",
    "media-processing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=25.0.0",
    "cl_ml_tools @ git+https://github.com/cloudonlanapps/cl_ml_tools.git@main",
    "pytest-asyncio>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "basedpyright>=1.36.0",
]

[project.urls]
Homepage = "https://github.com/cl-server/cl-server-shared"
Documentation = "https://github.com/cl-server/cl-server-shared#readme"
Repository = "https://github.com/cl-server/cl-server-shared"
Issues = "https://github.com/cl-server/cl-server-shared/issues"
Changelog = "https://github.com/cl-server/cl-server-shared/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cl_server_shared = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
test_storage_base_dir = "/tmp/cl_server_test"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "F811", "F401"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/cl_server_shared"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
[tool.basedpyright]
exclude = [
  "utils/**",
]
